[tool.poetry]
name = "aitbc-ai-service"
version = "0.1.0"
description = "AITBC AI Service for job operations"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.6"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
sqlmodel = ">=0.0.38"
sqlalchemy = ">=2.0.49"
pydantic = ">=2.11.0"
pydantic-settings = ">=2.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = ">=0.28.1"
asyncpg = ">=0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = ">=1.3.0"
black = ">=26.3.1"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
