[tool.poetry]
name = "plugin-service"
version = "0.1.0"
description = "AITBC Plugin Service for plugin registration, marketplace, and analytics"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlmodel = "^0.0.37"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = ">=0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = ">=1.3.0"
black = ">=26.3.1"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
